# activity_tracker

./: .coveragerc  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  MANIFEST.in  Makefile  README.md  cli.py  create_image.py  is_active.py  requirements.txt  setup.cfg  setup.py
.github/workflows/: python.yaml
activity_tracker/: __main__.py  autostart.py  cli.py  create_image.py  is_active.py  stats.py
requirements/: ci.txt
tests/: test_activity_tracker.py
