[metadata]
name = activity_tracker

author = Martin Thoma
author_email = info@martin-thoma.de
maintainer = Martin Thoma
maintainer_email = info@martin-thoma.de

# keep in sync with activity_tracker/__init__.py
version = 0.2.0

description = Track when you are at your computer
long_description = file: README.md
long_description_content_type = text/markdown
keywords = utility,

platforms = Linux

url =
download_url =

license = MIT license

# https://pypi.org/pypi?%3Aaction=list_classifiers
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
packages = find:
include_package_data = True
python_requires = >=3.7
install_requires =
    click
    pillow
    xprintidle
    requests
    plotly
    plotext
    kaleido
    types-requests

[options.entry_points]
console_scripts =
    activity_tracker = activity_tracker.cli:entry_point

[tool:pytest]
addopts = --doctest-modules --mccabe --cov=./activity_tracker --cov-report html:tests/reports/coverage-html --cov-report term-missing --ignore=docs/ --durations=3 --timeout=30
doctest_encoding = utf-8
mccabe-complexity=10

[pydocstyle]
match_dir = activity_tracker
ignore = D104, D105, D107, D301, D413, D203, D212, D100

[flake8]
max_line_length = 80
exclude = tests/*,.tox/*,.nox/*,docs/*
ignore = H301,H306,H404,H405,W503,D105,D413,D103,D107,E252,N803,E203,C416,A001,A003,P102

[isort]
import_heading_stdlib=Core Library modules
import_heading_thirdparty=Third party modules
import_heading_firstparty=First party modules
import_heading_localfolder=Local modules
include_trailing_comma=True
indent='    '
known_third_party = PIL,click,plotext,pytest,requests,setuptools,xprintidle
length_sort=0
line_length=80
multi_line_output=3

[mypy]
ignore_missing_imports=true
check_untyped_defs=true
disallow_untyped_defs=false
warn_unused_ignores=true
strict_optional=true
python_version=3.8
warn_redundant_casts=true
warn_unused_configs=true
disallow_untyped_calls=false
disallow_incomplete_defs=true
follow_imports=skip
html_report=mypy-report
mypy_path=typeshed/pyi:typeshed/imports
